# arcana-aegis

./: .envrc  README.md  migrate.py  pyproject.toml
db/: migrate.py
models/: __init__.py  associations.py  author.py  base.py  book.py  category.py  item.py  publisher.py
scripts/: count_file_types.py  count_file_types.sh  find_duplicate_files.sh
services/: library_manager.py
